--------------------------------------------------------------------------------------------------
Release notes version 1.8.2_beta : Enhancements, modifications and corrected bugs since version 1.8.1 :
--------------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------------
Release notes version 1.8.1 : Enhancements, modifications and corrected bugs since version 1.8.0 :
--------------------------------------------------------------------------------------------------
01/04/20 (TrioCFD) Enhancement : ALE improvements
30/01/20 (TrioCFD) Validation  : Add DirectionalPressureLoss validation sheet
09/12/19 (TrioCFD) Portability : Add 64 bits integers possibility to configure (experimental)
--------------------------------------------------------------------------------------------------
Release notes version 1.8.0 : Enhancements, modifications and corrected bugs since version 1.7.9 :
--------------------------------------------------------------------------------------------------
25/10/19 (TrioCFD) Major change: Turbulence features (turbulent problems, wall laws, turbulence models and associated boundary conditions) are moved from TRUST to TrioCFD baltik.
--------------------------------------------------------------------------------------------------
Release notes version 1.7.9 : Enhancements, modifications and corrected bugs since version 1.7.8 :
--------------------------------------------------------------------------------------------------
11/07/19 (TrioCFD) Enhancement : Arbitrary Lagrangian Eulerian frame of the NS equations (mesh moves along moving boundaries)
02/05/19 (TrioCFD) Minor change: FTD. New key word for mu average calculation : standard, arithmetic or harmonic
--------------------------------------------------------------------------------------------------